--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
         </div>
         <div class="p-6 font-mono text-sm leading-relaxed overflow-x-auto">
           <div class="text-gray-300">
-            <span class="code-keyword">import</span> { Resend } <span class="code-keyword">from</span> <span class="code-string">'monosend'</span>;<br><br>
-            <span class="code-keyword">const</span> resend = <span class="code-keyword">new</span> Resend(<span class="code-string">'re_123456789'</span>);<br><br>
-            <span class="code-keyword">await</span> resend.emails.send({<br>
-            &nbsp;&nbsp;from: <span class="code-string">'onboarding@resend.com'</span>,<br>
+            <span class="code-keyword">import</span> { Monosend } <span class="code-keyword">from</span> <span class="code-string">'monosend'</span>;<br><br>
+            <span class="code-keyword">const</span> monosend = <span class="code-keyword">new</span> Monosend(<span class="code-string">'re_123456789'</span>);<br><br>
+            <span class="code-keyword">await</span> monosend.emails.send({<br>
+            &nbsp;&nbsp;from: <span class="code-string">'onboarding@monosend'</span>,<br>
             &nbsp;&nbsp;to: <span class="code-string">'user@gmail.com'</span>,<br>
             &nbsp;&nbsp;subject: <span class="code-string">'Hello World'</span>,<br>
             &nbsp;&nbsp;html: <span class="code-string">'&lt;p&gt;Congrats on sending your &lt;strong&gt;first email&lt;/strong&gt;!&lt;/p&gt;'</span><br>
