--- a/index.html
+++ b/index.html
@@ -502,17 +502,17 @@
             </div>
             <div class="flex flex-col gap-4">
               <h4 class="text-xs font-bold uppercase tracking-wider text-text-dark mb-2">Company</h4>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">About</a>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Blog</a>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Careers</a>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Legal</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">About</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Blog</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Careers</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Legal</a>
             </div>
             <div class="flex flex-col gap-4">
               <h4 class="text-xs font-bold uppercase tracking-wider text-text-dark mb-2">Social</h4>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">GitHub</a>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Twitter (X)</a>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">LinkedIn</a>
-              <a href="https://test.landinghero.app/#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Discord</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">GitHub</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Twitter (X)</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">LinkedIn</a>
+              <a href="#" class="text-sm text-text-light hover:text-primary-blue transition-colors">Discord</a>
             </div>
         </div>
       </div>
@@ -520,8 +520,8 @@
       <div class="border-t border-gray-100 pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
         <p class="text-xs text-text-light">© 2025 Monosend Inc. All rights reserved.</p>
         <div class="flex gap-6">
-            <a href="https://test.landinghero.app/#" class="text-xs text-text-light hover:text-text-dark">Privacy</a>
-            <a href="https://test.landinghero.app/#" class="text-xs text-text-light hover:text-text-dark">Terms</a>
+            <a href="#" class="text-xs text-text-light hover:text-text-dark">Privacy</a>
+            <a href="#" class="text-xs text-text-light hover:text-text-dark">Terms</a>
         </div>
       </div>
     </div>
