--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
             <path d="M12 22.08V12" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
         </div>
-        <span class="text-xl font-bold tracking-tight">Monosend</span>
+        <img
+            src="/logo.png"
+            alt="MonoSend"
+            className="h-8 object-contain"
+          />
+        <!-- <span class="text-xl font-bold tracking-tight">Monosend</span> -->
       </a>
       
       <div class="hidden md:flex items-center gap-8">
