--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <img
             src="/logo.png"
             alt="MonoSend"
-            className="h-8 object-contain"
+            class="h-8 object-contain"
           />
         <!-- <span class="text-xl font-bold tracking-tight">Monosend</span> -->
       </a>
