--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <a href="#integrations" class="text-sm font-medium tracking-tight text-text-medium hover:text-primary-blue transition-colors">Integrations</a>
         <a href="#customers" class="text-sm font-medium tracking-tight text-text-medium hover:text-primary-blue transition-colors">Customers</a>
         <a href="#pricing" class="text-sm font-medium tracking-tight text-text-medium hover:text-primary-blue transition-colors">Pricing</a>
-        <a href="#docs" class="text-sm font-medium tracking-tight text-text-medium hover:text-primary-blue transition-colors">Docs</a>
+        <a href="https://id-preview--ac21b985-7337-4021-be11-1569f6e007a0.lovable.app/introduction" class="text-sm font-medium tracking-tight text-text-medium hover:text-primary-blue transition-colors">Docs</a>
       </div>
       
       <div class="hidden md:flex items-center gap-4">
@@ -120,7 +120,7 @@
       <a href="#features" class="text-2xl font-medium text-text-dark hover:text-primary-blue transition-colors">Features</a>
       <a href="#integrations" class="text-2xl font-medium text-text-dark hover:text-primary-blue transition-colors">Integrations</a>
       <a href="#pricing" class="text-2xl font-medium text-text-dark hover:text-primary-blue transition-colors">Pricing</a>
-      <a href="#docs" class="text-2xl font-medium text-text-dark hover:text-primary-blue transition-colors">Docs</a>
+      <a href="https://id-preview--ac21b985-7337-4021-be11-1569f6e007a0.lovable.app/introduction" class="text-2xl font-medium text-text-dark hover:text-primary-blue transition-colors">Docs</a>
       <a href="#" class="px-8 py-3 rounded-full bg-black text-white font-medium text-xl transition-all hover:bg-primary-blue shadow-lg">
           Get Started
       </a>
