--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="p-6 font-mono text-sm leading-relaxed overflow-x-auto">
           <div class="text-gray-300">
             <span class="code-keyword">import</span> { Monosend } <span class="code-keyword">from</span> <span class="code-string">'monosend'</span>;<br><br>
-            <span class="code-keyword">const</span> monosend = <span class="code-keyword">new</span> Monosend(<span class="code-string">'re_123456789'</span>);<br><br>
+            <span class="code-keyword">const</span> monosend = <span class="code-keyword">new</span> Monosend(<span class="code-string">'ms_123456789'</span>);<br><br>
             <span class="code-keyword">await</span> monosend.emails.send({<br>
             &nbsp;&nbsp;from: <span class="code-string">'onboarding@monosend'</span>,<br>
             &nbsp;&nbsp;to: <span class="code-string">'user@gmail.com'</span>,<br>
