--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <span class="code-keyword">import</span> { Monosend } <span class="code-keyword">from</span> <span class="code-string">'monosend'</span>;<br><br>
             <span class="code-keyword">const</span> monosend = <span class="code-keyword">new</span> Monosend(<span class="code-string">'mono_123456789'</span>);<br><br>
             <span class="code-keyword">await</span> monosend.emails.send({<br>
-            &nbsp;&nbsp;from: <span class="code-string">'onboarding@monosend'</span>,<br>
+            &nbsp;&nbsp;from: <span class="code-string">'onboarding@monosend.io'</span>,<br>
             &nbsp;&nbsp;to: <span class="code-string">'user@gmail.com'</span>,<br>
             &nbsp;&nbsp;subject: <span class="code-string">'Hello World'</span>,<br>
             &nbsp;&nbsp;html: <span class="code-string">'&lt;p&gt;Congrats on sending your &lt;strong&gt;first email&lt;/strong&gt;!&lt;/p&gt;'</span><br>
