--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         &nbsp;&nbsp;<span class="code-keyword">return</span> (<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="code-func">Html</span>&gt;<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="code-func">h1</span>&gt;Welcome to the platform&lt;/<span class="code-func">h1</span>&gt;<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="code-func">Button</span> href=<span class="code-string">"https://monosend.com"</span>&gt;<br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="code-func">Button</span> href=<span class="code-string">"https://monosend.io"</span>&gt;<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Click me<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/<span class="code-func">Button</span>&gt;<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&lt;/<span class="code-func">Html</span>&gt;<br>
